Move functions into modules

--- a/ali/notebook.ipynb
+++ b/ali/notebook.ipynb
@@ -2,79 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named matplotlib.pyplot",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-aa2109e7ac1f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mbase_module_path\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbase_module_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mcervix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Users/aliteeney/Desktop/projects/cervix/cervix/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msubmission\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/aliteeney/Desktop/projects/cervix/cervix/data.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0m__future__\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mprint_function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mglob\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mglob\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: No module named matplotlib.pyplot"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
     "base_module_path = os.path.abspath(os.path.join('..'))\n",
     "if base_module_path not in sys.path:\n",
     "    sys.path.append(base_module_path)\n",
-    "import cervix"
+    "import cervix as c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'module' object has no attribute 'data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-432c1772d105>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcervix\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmake_base_df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m#small_df = df.sample(500,random_state=3)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#test_df = df.sample(30,random_state=4)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdesc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'gray_'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'module' object has no attribute 'data'"
+     ]
+    }
+   ],
    "source": [
-    "import cv2\n",
-    "\n",
-    "def get_grayscale_img(path, rescale_dim):\n",
-    "    img = cv2.imread(path)\n",
-    "    rescaled = cv2.resize(img, (rescale_dim, rescale_dim), cv2.INTER_LINEAR)\n",
-    "    gray = cv2.cvtColor(rescaled, cv2.COLOR_RGB2GRAY).astype('float')\n",
-    "    return gray\n",
-    "\n",
-    "def save_img(img, num_id, desc):\n",
-    "    path = desc+num_id+\".jpg\"\n",
-    "    cv2.imwrite(path,img)\n",
-    "    return path\n",
-    "    \n",
-    "def save_grayscale_row(row, desc):\n",
-    "    path = row.path\n",
-    "    num_id = row.num_id\n",
-    "    gray = get_grayscale_img(path, 100)\n",
-    "    return save_img(gray, num_id, desc)\n",
-    "\n",
-    "def save_grayscale(df):\n",
-    "    for index, row in df.iterrows():\n",
-    "        df.loc[index,'gray_path'] = save_grayscale_row(row,desc)\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "df = cervix.data.make_base_df()\n",
-    "#small_df = df.sample(500,random_state=3)\n",
-    "#test_df = df.sample(30,random_state=4)\n",
+    "df = c.data.make_base_df()\n",
     "\n",
     "desc = 'gray_'\n",
-    "#test_df = save_grayscale(test_df)\n",
-    "#small_df = save_grayscale(small_df)\n",
-    "df = save_grayscale(df)"
+    "df = c.processing.save_grayscale(df)"
    ]
   },
   {
@@ -85,42 +72,8 @@
    },
    "outputs": [],
    "source": [
-    "test_df = cervix.test.make_test_df()\n",
-    "test_df = save_grayscale(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def random_forest_transform(df, test=False):\n",
-    "    forest_df = pd.DataFrame()\n",
-    "    vecs = []\n",
-    "    types = []\n",
-    "    ids = []\n",
-    "    for _, row in df.iterrows():\n",
-    "        gray = cv2.imread(row.gray_path)\n",
-    "        vec = process_image(gray)\n",
-    "        if not test:\n",
-    "            cervix_type = row.type\n",
-    "            types.append(cervix_type[-1])\n",
-    "        else:\n",
-    "            ids.append(row.num_id)\n",
-    "        vecs.append(vec)\n",
-    "    if not test:\n",
-    "        return np.squeeze(np.array(vecs)), np.array(types)\n",
-    "    else:\n",
-    "        return np.squeeze(np.array(vecs)), np.array(ids)\n",
-    "                              \n",
-    "def process_image(img):\n",
-    "    \"\"\"Normalize image and turn into array of one long column\"\"\"\n",
-    "    normalized = cv2.normalize(img, None, 0, 1, cv2.NORM_MINMAX)\n",
-    "    vec = normalized.reshape(1, np.prod(normalized.shape))\n",
-    "    return vec / np.linalg.norm(vec)\n"
+    "test_df = c.data.make_test_df()\n",
+    "test_df = c.processing.save_grayscale(df)"
    ]
   },
   {
@@ -133,8 +86,8 @@
    "source": [
     "from sklearn.ensemble import RandomForestClassifier as RFC\n",
     "\n",
-    "vecs, types = random_forest_transform(df)\n",
-    "test_vecs, ids = random_forest_transform(test_df, True)\n",
+    "vecs, types = c.data.random_forest_transform(df)\n",
+    "test_vecs, ids = c.random_forest_transform(test_df, True)\n",
     "forest = RFC(n_jobs=2,n_estimators=50)\n",
     "\n",
     "forest.fit(vecs, types)"
@@ -159,26 +112,7 @@
    },
    "outputs": [],
    "source": [
-    "import csv\n",
-    "\n",
-    "def write_to_file(path, ids, preds):\n",
-    "    with open(path, 'w') as csv_f:\n",
-    "        writer = csv.writer(csv_f)\n",
-    "        writer.writerow(['image_name','Type_1','Type_2','Type_3'])\n",
-    "        for i,row in enumerate(preds_probs):\n",
-    "            path = [ids[i]+'.jpg']\n",
-    "            writer.writerow(path+list(row))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "write_to_file('output.csv', ids, preds_probs)"
+    "c.submission.write_submission_file('output.csv', ids, preds_probs)"
    ]
   }
  ],
