--- a/dbc/Cervix_resize_1000.ipynb
+++ b/dbc/Cervix_resize_1000.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -66,21 +66,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.10.1013.1014.1019.102.1023.1024.1026.1027.1033.104.1040.1056.1059.1061.1070.1071.1077.1079.109.1093.1100.1105.1123.1131.1134.1136.1139.1154.1161.1168.1174.1179.1190.1194.1199.12.1202.1204.1220.1223.1226.1229.1230.1239.1245.1251.1273.1274.1279.1281.1285.1288.1289.129.13.1308.1314.1320.1324.1326.1336.1339.1344.1346.1370.138.1384.1389.139.1390.1393.14.1414.142.1422.1427.1430.1437.144.1440.1456.1464.1468.1473.148.160.171.176.180.181.191.201.205.208.215.218.229.230.237.239.245.248.252.254.262.265.267.27.281.294.298.306.308.311.333.334.338.34.342.346.349.35.356.376.379.383.384.387.396.401.41.416.421.425.434.441.446.454.463.469.47.470.471.478.48.481.484.497.513.516.518.523.531.532.536.539.55.550.551.553.558.560.562.57.576.578.579.580.582.583.593.596.605.619.620.623.624.641.643.645.649.653.660.663.667.668.677.683.685.7.700.708.709.710.713.725.727.732.739.745.751.759.763.764.765.769.779.783.787.791.802.805.809.81.810.814.817.821.833.836.842.846.855.873.879.880.887.889.890.891.895.901.906.908.917.918.920.921.928.930.96.965.972.977.982.984.991.998.1.100.1001.1002.1005.1006.101.1010.1011.1012.1016.1017.1018.1021.1022.1025.103.1032.1035.1036.1038.1039.1042.1043.1044.1046.1047.1049.105.1050.1051.1054.1055.1057.1058.1065.1066.1067.1068.107.1072.1073.1074.1075.1076.1078.1083.1084.1085.1087.1089.1090.1091.1096.1097.1098.1099.110.1102.1103.1104.1106.1109.1114.1115.1116.1117.1118.1119.112.1121.1122.1124.1125.1126.1130.1132.1135.1138.1140.1141.1142.1143.1144.1145.1146.1147.1148.1149.115.1151.1152.1155.1156.1158.1159.116.1160.1169.117.1170.1171.1172.1173.1175.1176.1178.1180.1181.1184.1185.1186.1187.1188.1189.119.1192.1193.1195.1196.1197.1198.120.1201.1203.1205.1209.121.1210.1211.1212.1213.1214.1215.1216.1217.1218.1219.122.1222.1225.1227.1228.123.1231.1233.1234.1236.1238.1240.1241.1242.1243.1246.1247.1249.1250.1253.1255.1257.1258.126.1260.1261.1262.1263.1264.1266.1267.1269.127.1271.1272.1276.128.1282.1283.1290.1292.1293.1294.1295.1297.1298.1299.1301.1302.1303.1304.1305.131.1310.1311.1312.1313.1315.1316.1317.1318.1319.1321.1322.1325.1327."
+     ]
+    }
+   ],
    "source": [
     "df = c.data.make_base_df()\n",
-    "df = c.processing.transform_save_imgs(df, c.processing.resize_100);\n",
-    "df = c.processing.random_forest_transform(df, 'resize_100_path', grayscale=False)"
+    "df = c.processing.transform_save_imgs(df, c.processing.resize_n(1000));\n",
+    "df = c.processing.random_forest_transform(df, 'resize_1000_path', grayscale=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 149,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train, validate, test = c.data.split_df(df); "
@@ -499,6 +507,7 @@
    "cell_type": "code",
    "execution_count": 154,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
