Fix log error plotting bug

--- a/ali/create_submission_inceptionv3.ipynb
+++ b/ali/create_submission_inceptionv3.ipynb
@@ -147,41 +147,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
-       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
-       "            min_impurity_split=1e-07, min_samples_leaf=1,\n",
-       "            min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
-       "            n_estimators=50, n_jobs=2, oob_score=False, random_state=None,\n",
-       "            verbose=0, warm_start=False)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'keras' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-13b85fd9bf70>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mmodel_fp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'../data/model/v3_172_SGD_v1.h5'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_fp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'keras' is not defined"
+     ]
     }
    ],
    "source": [
     "model_fp = '../data/model/v3_172_SGD_v1.h5'\n",
     "model = keras.load_model(model_fp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "test_vecs = np.squeeze(np.array(test['vec'].tolist()))\n",
-    "\n",
-    "preds_probs = forest.predict_proba(test_vecs)"
    ]
   },
   {
