Move log error plot to different file

--- a/ali/create_submission_inceptionv3.ipynb
+++ b/ali/create_submission_inceptionv3.ipynb
@@ -2,11 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -18,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -169,13 +175,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "batch_size_t = 1\n",
+    "predictions = model.predict_generator(c.processing.df_to_keras_generator(test, batch_size_t, grayscale=False)\n",
+    "                    ,len(test))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "test = c.processing.append_probabilities(test, preds_probs, forest.classes_)"
+    "test = c.processing.append_probabilities(test, predictions, ['1','2','3']); "
    ]
   },
   {
@@ -301,24 +320,15 @@
    },
    "outputs": [],
    "source": [
-    "c.submission.write_submission_file('output2.csv', test)"
+    "c.submission.write_submission_file('output_v3_172_SGD_v1.csv', test)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "venv",
    "language": "python",
-   "name": "python2"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
