--- a/dbc/V3_just_top_layer+top2_inceptionblocks_SGD.ipynb
+++ b/dbc/V3_just_top_layer+top2_inceptionblocks_SGD.ipynb
@@ -2628,7 +2628,9 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2651,6 +2653,17 @@
    ],
    "source": [
     "c.data.check_image(ldf.sort_values('log_l', ascending=False).processed_path.iloc[4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import platform"
    ]
   },
   {
