--- a/dbc/V3_just_top_layer+top2_inceptionblocks.ipynb
+++ b/dbc/V3_just_top_layer+top2_inceptionblocks.ipynb
@@ -36,6 +36,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['', '/Users/dbcerigo/dev/cervix/venv/lib/python27.zip', '/Users/dbcerigo/dev/cervix/venv/lib/python2.7', '/Users/dbcerigo/dev/cervix/venv/lib/python2.7/plat-darwin', '/Users/dbcerigo/dev/cervix/venv/lib/python2.7/plat-mac', '/Users/dbcerigo/dev/cervix/venv/lib/python2.7/plat-mac/lib-scriptpackages', '/Users/dbcerigo/dev/cervix/venv/lib/python2.7/lib-tk', '/Users/dbcerigo/dev/cervix/venv/lib/python2.7/lib-old', '/Users/dbcerigo/dev/cervix/venv/lib/python2.7/lib-dynload', '/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7', '/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/plat-darwin', '/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/lib-tk', '/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/plat-mac', '/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/plat-mac/lib-scriptpackages', '/Users/dbcerigo/dev/cervix/venv/lib/python2.7/site-packages', '/Users/dbcerigo/dev/cervix/venv/lib/python2.7/site-packages/IPython/extensions', '/Users/dbcerigo/.ipython', '/Users/dbcerigo/dev/cervix']\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -49,6 +56,7 @@
     "base_module_path = os.path.abspath(os.path.join('..'))\n",
     "if base_module_path not in sys.path:\n",
     "    sys.path.append(base_module_path)\n",
+    "print(sys.path)\n",
     "import cervix as c"
    ]
   },
